# banana

./: .replit  README.md  banana.py  pyproject.toml  replit.nix
banana/: board.py  validation.py  validation_test.py
banana/board/: __init__.py  board.py  board_test.py  direction.py  direction_test.py  offset.py  offset_test.py  position.py  position_test.py  tile.py  tile_test.py  word.py  word_test.py
banana/dictionary/: __init__.py  dictionary.py  dictionary_test.py  utils.py  utils_test.py
banana/reasoning/: __init__.py  constraint.py  constraint_generator.py  constraint_generator_test.py  constraint_test.py  search.py
banana/reasoning/constraints/: __init__.py  and_.py  and_test.py  contains.py  contains_test.py  in_set.py  in_set_test.py  sort_words_by_len.py  sort_words_by_len_test.py  start.py  start_test.py
banana/reasoning/generators/: __init__.py  simple.py  simple_constraint_generator.py  simple_constraint_generator_test.py
banana/reasoning/searches/: __init__.py  beam_search.py  beam_search_test.py  dfs.py  dfs_test.py
scripts/: banana.py  experiment.py  optimize.py
words/: 500.txt  large.txt
