[tool.poetry]
name = "banana"
version = "0.1.0"
description = "na na nanana bananagrams"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
pytest-cov = "^4.0.0"  # Adjust the version as needed
black = "^25.1.0"
pytest-subtests = "^0.14.1"
pytest = "^8.3.5"
pyright = "^1.1.398"
ruff = "^0.11.3"

[tool.black]
line-length = 88
include = 'banana'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | \.local
  | \.cache
  | \.idea
  | \.vscode
  | _build
  | build
  | dist
  | __pycache__
  | .*/__pycache__
  | .*/\.gitignore
  | .*/\.local/share/virtualenv/.*
)/
'''

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
# Specify the rule codes that Ruff is allowed to fix.
fixable = ["ALL"]  # Allows autofix for all enabled rules.
unfixable = []     # No rules are marked as unfixable.

[tool.pyright]
include = ["banana"]
exclude = ["**/node_modules", "**/__pycache__"]
strict = ["banana"]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s --capture=no -vv --cov=banana --cov-report=term-missing"

[tool.poe.tasks]
format = "black ."
lint = "ruff check --fix ."
typecheck = "pyright"
test = "pytest"
all = ["format", "lint", "typecheck", "test"]
