[tool.poetry]
name = "banana"
version = "0.1.0"
description = "na na nanana bananagrams"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
pytest-cov = "^4.0.0"
black = "^25.1.0"
pytest-subtests = "^0.14.1"
pytest = "^8.3.5"
pyright = "^1.1.398"
ruff = "^0.11.3"
tabulate = "^0.9.0"
optuna = "^4.2.1"

[tool.black]
line-length = 88
include = 'banana|scripts'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | \.local
  | \.cache
  | \.idea
  | \.vscode
  | _build
  | build
  | dist
  | __pycache__
  | .*/__pycache__
  | .*/\.gitignore
  | .*/\.local/share/virtualenv/.*
)/
'''

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
# Specify the rule codes that Ruff is allowed to fix.
fixable = ["ALL"]  # Allows autofix for all enabled rules.
unfixable = []     # No rules are marked as unfixable.

[tool.pyright]
include = ["banana","scripts"]
exclude = ["**/node_modules", "**/__pycache__"]
strict = ["banana"]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s --capture=no -vv --cov=banana --cov-report=term-missing"

[tool.poe.tasks]
format = "black ."
lint = "ruff check --fix ."
typecheck = "pyright"
test = "pytest"
lock = "poetry lock"
install = "poetry install"
all = ["lock", "install", "format", "lint", "typecheck", "test"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.:",
]

[tool.poetry.scripts]
banana = "scripts.banana:main"
experiment = "scripts.experiment:main"
optimize="scripts.optimize:main"